--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,4 +6,4 @@ install:
 
 build_script:
   - git clone https://github.com/Mudlet/Mudlet.git
-  - docker build -t keneanung/mudlet-build-docker-windows Mudlet
+  - docker build -t keneanung/mudlet-build-docker-windows .
