--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,4 +6,4 @@ install:
 
 build_script:
   - git clone -b keneanung-patch-1 https://github.com/keneanung/Mudlet-1.git Mudlet
-  - docker build -t keneanung/mudlet-build-docker-windows .
+  - docker build --isolation=hyperv -t keneanung/mudlet-build-docker-windows .
